@@ -10,6 +10,7 @@
   [#36454] string.h: Error for long long in C90
   [#36581] avr-libc: pgmspace.h is not ANSI compliant
   [#37778] _MemoryBarrier() in cpufunc.h error on compile
+  [#38135] Install a dummy stdfix-avrlibc.h
   [no-id]  XXX_vect_num not consistent io90pwmx.h, iousbxx6_7.h
 
 * New devices supported:
